[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["code_dagger"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "code_dagger"
version = "0.0.1"
authors = [
    {name="Lintang Sutawika", email="lsutawik@andrew.cmu.edu"}
]
description = "Training code edit trajectories with DAgger"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "datasets",
    "transformers",
    "tqdm",
    "jsonlines",
    "openai",
    "whatthepatch",
    "openrlhf@git+https://github.com/OpenRLHF/OpenRLHF.git",
    "yeval@https://github.com/lintangsutawika/yaeval-harness.git",
    "vllm",
]

[tool.setuptools.packages.find]
include = ["code_dagger/*"]

[project.scripts]
code_dagger = "code_dagger.__main__:main"
